MUZ-027 #start-progress #comment introduce dependencyManagement for plugins
Former-commit-id: 1fbdf483688deb858f47a72c755e530e2a75684d