@@ -202,7 +202,118 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+    <build>
+        <pluginManagement>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>11</source>
+                <target>11</target>
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>java.xml/com.sun.org.apache.xerces.internal.jaxp.datatype=ALL-UNNAMED</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/sun.security.validator=ALL-UNNAMED</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+                </compilerArgs>
+                <forceJavacCompilerUse>true</forceJavacCompilerUse>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.2.1</version>
+            <executions>
+                <execution>
+                    <id>attach-sources</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>jar-no-fork</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.0.0</version>
+            <executions>
+                <execution>
+                    <id>train</id>
+                    <configuration>
+                        <mainClass>ai.enpasos.muzero.platform.run.train.MuZero</mainClass>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>test</id>
+                    <configuration>
+                        <mainClass>ai.enpasos.muzero.platform.run.TicTacToeTest</mainClass>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>integrationtest</id>
+                    <configuration>
+                        <mainClass>ai.enpasos.muzero.integrationtest.TicTacToeTest</mainClass>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <mainClass>ai.enpasos.muzero.platform.run.train.MuZero</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>com.github.os72</groupId>
+            <artifactId>protoc-jar-maven-plugin</artifactId>
+            <version>3.11.4</version>
+            <executions>
+                <execution>
+                    <phase>generate-sources</phase>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                    <configuration>
+                        <addProtoSources>all</addProtoSources>
+                        <includeMavenTypes>direct</includeMavenTypes>
+                        <inputDirectories>
+                            <include>src/main/protobuf</include>
+                        </inputDirectories>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+        </pluginManagement>
+    </build>
     <repositories>
         <repository>
             <id>djl.ai</id>
